<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".FinalActivity">

    <TextView
        android:id="@+id/new_record_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginBottom="58dp"
        android:fontFamily="@font/itckrist"
        android:paddingLeft="5sp"
        android:text="@string/new_record"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/coin_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/coin_image"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="163dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="112dp"
        app:layout_constraintBottom_toTopOf="@+id/comment_tv"
        app:layout_constraintEnd_toStartOf="@+id/money_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_record_tv"
        app:srcCompat="@drawable/coin" />

    <TextView
        android:id="@+id/money_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="176dp"
        android:fontFamily="@font/itckrist"
        android:paddingLeft="5sp"
        android:text="111"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/coin_image"
        app:layout_constraintTop_toTopOf="@+id/coin_image" />

    <TextView
        android:id="@+id/comment_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="97dp"
        android:fontFamily="@font/itckrist"
        android:foregroundGravity="center"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/e"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_replay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coin_image" />

    <Button
        android:id="@+id/btn_replay"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="46dp"
        android:background="@drawable/btn_press_logic"
        android:fontFamily="@font/itckrist"
        android:text="@string/replay"
        app:layout_constraintBottom_toTopOf="@+id/btn_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comment_tv" />

    <Button
        android:id="@+id/btn_menu"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="299dp"
        android:background="@drawable/btn_press_logic"
        android:fontFamily="@font/itckrist"
        android:text="@string/menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_replay" />

</androidx.constraintlayout.widget.ConstraintLayout>