<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ShopActivity">


    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/itckrist"
        android:text="@string/shop"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/balance_image"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="62dp"
        android:layout_marginEnd="62dp"
        app:layout_constraintBottom_toBottomOf="@+id/balance_tv"
        app:layout_constraintEnd_toStartOf="@+id/btn1_buy"
        app:layout_constraintStart_toEndOf="@+id/two_tv"
        app:layout_constraintTop_toTopOf="@+id/balance_tv"
        app:srcCompat="@drawable/coin" />

    <TextView
        android:id="@+id/balance_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="63dp"
        android:fontFamily="@font/itckrist"
        android:text="0"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/balance_image"
        app:layout_constraintTop_toBottomOf="@+id/title_tv" />

    <Button
        android:id="@+id/btn_ad"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:background="@drawable/btn_press_logic"
        android:fontFamily="@font/itckrist"
        android:padding="10sp"
        android:text="@string/ad"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn3_buy" />

    <TextView
        android:id="@+id/ad_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="11dp"
        android:fontFamily="@font/itckrist"
        android:text="+100"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/coin_image"
        app:layout_constraintTop_toBottomOf="@+id/btn_ad" />

    <ImageView
        android:id="@+id/coin_image"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="85dp"
        app:layout_constraintBottom_toBottomOf="@+id/ad_tv"
        app:layout_constraintEnd_toStartOf="@+id/coin_image3"
        app:layout_constraintStart_toStartOf="@+id/btn_ad"
        app:layout_constraintTop_toTopOf="@+id/ad_tv"
        app:srcCompat="@drawable/coin" />

    <TextView
        android:id="@+id/one_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="232dp"
        android:layout_marginBottom="234dp"
        android:fontFamily="@font/itckrist"
        android:text="@string/one_product"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_ad"
        app:layout_constraintEnd_toEndOf="@+id/two_tv"
        app:layout_constraintStart_toEndOf="@+id/two_tv"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn1_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:background="@drawable/btn_press_logic"
        android:fontFamily="@font/itckrist"
        android:paddingEnd="15dp"
        android:text="100"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btn_back"
        app:layout_constraintStart_toStartOf="@+id/btn_back"
        app:layout_constraintTop_toBottomOf="@+id/balance_tv" />

    <ImageView
        android:id="@+id/coin_image1"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="99dp"
        android:layout_marginBottom="99dp"
        app:layout_constraintBottom_toTopOf="@+id/coin_image3"
        app:layout_constraintEnd_toEndOf="@+id/coin_image2"
        app:layout_constraintStart_toStartOf="@+id/coin_image2"
        app:layout_constraintTop_toTopOf="@+id/balance_tv"
        app:srcCompat="@drawable/coin" />

    <TextView
        android:id="@+id/two_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/itckrist"
        android:text="@string/two_product"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one_tv" />

    <Button
        android:id="@+id/btn2_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:background="@drawable/btn_press_logic"
        android:fontFamily="@font/itckrist"
        android:paddingEnd="15dp"
        android:text="500"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/btn1_buy"
        app:layout_constraintTop_toBottomOf="@+id/btn1_buy" />

    <ImageView
        android:id="@+id/coin_image2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/two_tv"
        app:layout_constraintEnd_toEndOf="@+id/btn2_buy"
        app:layout_constraintTop_toTopOf="@+id/btn2_buy"
        app:srcCompat="@drawable/coin" />

    <TextView
        android:id="@+id/three_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/itckrist"
        android:text="@string/three_product"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/two_tv" />

    <Button
        android:id="@+id/btn3_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:background="@drawable/btn_press_logic"
        android:fontFamily="@font/itckrist"
        android:paddingEnd="15dp"
        android:text="1000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/btn2_buy"
        app:layout_constraintTop_toBottomOf="@+id/btn2_buy" />

    <ImageView
        android:id="@+id/coin_image3"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn3_buy"
        app:layout_constraintEnd_toEndOf="@+id/btn3_buy"
        app:layout_constraintStart_toStartOf="@+id/coin_image2"
        app:layout_constraintTop_toTopOf="@+id/btn3_buy"
        app:srcCompat="@drawable/coin" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/btn_press_logic"
        android:fontFamily="@font/itckrist"
        android:text="@string/back"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>