<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".GameActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/life1_image"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:srcCompat="@drawable/life" />

        <ImageView
            android:id="@+id/life2_image"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:srcCompat="@drawable/life" />

        <ImageView
            android:id="@+id/life3_image"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:srcCompat="@drawable/life" />

        <ImageView
            android:id="@+id/life4_image"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:visibility="invisible"
            app:srcCompat="@drawable/life" />

        <ImageView
            android:id="@+id/life5_image"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:visibility="invisible"
            app:srcCompat="@drawable/life" />
    </LinearLayout>

    <TextView
        android:id="@+id/score_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="37dp"
        android:fontFamily="@font/itckrist"
        android:text="0"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="191dp"
        android:background="@drawable/btn_press_logic"
        android:fontFamily="@font/itckrist"
        android:text="@string/more"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/num_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="31dp"
        android:fontFamily="@font/itckrist"
        android:text="71"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btn_more"
        app:layout_constraintTop_toBottomOf="@+id/btn_more" />

    <Button
        android:id="@+id/btn_less"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:background="@drawable/btn_press_logic"
        android:fontFamily="@font/itckrist"
        android:text="@string/less"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num_tv" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="57dp"
        android:background="@drawable/btn_press_logic"
        android:fontFamily="@font/itckrist"
        android:text="@string/back"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>